--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@
 carpentry: dc
 
 # Overall title for pages.
-title: Lesson Title
+title: Test S3 Buckets
 
 # Date the lesson was created (this is empty by default)
 created: ~
