update config and aws deploy

--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -1,11 +1,10 @@
 name: "Deploy to AWS"
 
 on:
-  push:
-    branches:
-      - 'gh-pages'
-  schedule:
-    - cron: '0 0 * * 2'
+  workflow_run:
+    workflows: ["01 Build and Deploy Site"]
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
